--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
 <body>
 <div class="block">
     <h3>Daniel Testimonial</h3>
-    <img src="/image-daniel.jpeg" alt="Daniel">
+    <img src="Images/image-daniel.jpeg" alt="Daniel">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur at diam et semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec non nulla..</p>
 
 </div> <div class="block">
     <h3>Jeanette Testimonial</h3>
-    <img src="/image-jeanette.jpeg" alt="Jeanette">
+    <img src="Images/image-jeanette.jpeg" alt="Jeanette">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur at diam et semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec non nulla.</p>
 
 </div><div class="block">
     <h3>Jonathan Testimonial</h3>
-    <img src="/image-jonathan.jpeg" alt="Johnathan">
+    <img src="Images/image-jonathan.jpeg" alt="Johnathan">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur at diam et semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec non nulla.</p>
 </div> 
 
 <div class="lr"></div>
 <div id="main-block">
     <h3>Kira Testimonial</h3>
-    <img src="/image-kira.jpeg" alt="Kira">
+    <img src="Images/image-kira.jpeg" alt="Kira">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ultrices, lectus nec suscipit bibendum, tellus neque fringilla ex, consectetur laoreet est diam ac risus. Pellentesque dapibus elit ipsum, ut tincidunt nibh luctus vel. In leo mi, vestibulum id fermentum in, maximus in ex. Cras vestibulum ut massa sed luctus. Sed tristique risus tristique, egestas neque vel, vehicula diam. Phasellus eget justo eleifend, fringilla neque sed, rutrum quam. Etiam imperdiet elementum iaculis. Nunc ultrices elementum mauris, ac interdum nibh suscipit id. Sed in ornare magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi lobortis nisi at nunc dignissim maximus. Aliquam ornare, nulla eu scelerisque tincidunt, diam mauris mollis dui, vel tincidunt arcu quam ac sapien.</p>
 </div>
 
 <div id="sidebar">
     <h3>Patrick Testimonial</h3>
-    <img src="/image-patrick.jpeg" alt="Patrick">
+    <img src="Images/image-patrick.jpeg" alt="Patrick">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget pretium dolor, eu mattis eros. Vestibulum vestibulum felis eu lectus accumsan elementum. Duis non lacinia lorem. Quisque viverra, ex et.</p>
 </div>
 </body>
